# TooseChat

./: CMakeLists.txt  README.md
include/: client.h  server.h  utils.h
include/encryption/: blowfish.h  diffiehellman.h  encryption.h
scripts/: toose_chat.py
src/: client.cpp  main.cpp  server.cpp  utils.cpp
src/encryption/: blowfish.cpp  diffiehellman.cpp
